Use Integer.valueOf(...) to save memory
This allows the pooling of Integer instances.