@@ -382,7 +382,7 @@ public abstract class TelnetProtocolHandler {
       if (b>=128)
         b=(byte)(b-256);
       if(debug > 2) {
-        Byte B = new Byte(b);
+        Byte B = Byte.valueOf(b);
         System.err.print("byte: " + B.intValue()+ " ");
       }
       switch (neg_state) {
